--- a/src/main/webapp/hello.html
+++ b/src/main/webapp/hello.html
@@ -1,4 +1,4 @@
-<h1>Example :: Get wonders</h1>
+<h1>Example :: pharametarised</h1>
 <li>id: <span id="_id"></span></li>
 <li>name: <span id="_name"></span></li>
 
